...
    //adding play button (below level name)
    UIButton *playButton = [UIButton buttonWithType:UIButtonTypeCustom];
    playButton.tag = 502;
    playButton.hidden = YES;
    playButton.frame = CGRectMake(85, 45, 115, 25);
    playButton.titleLabel.font = [UIFont boldSystemFontOfSize:14];
    [playButton setTitle:@"Play" forState:UIControlStateNormal];
    playButton.backgroundColor = [UIColor clearColor];
    [playButton addTarget:target action:@selector(buttonClicked:) forControlEvents:UIControlEventTouchUpInside];
    
    
    CAGradientLayer *newGradientLayer = [CAGradientLayer layer];
    newGradientLayer.frame = playButton.layer.bounds;
...
