...
    @objc func addNewSceneAllert() {
        Util.askUser(forUniqueNameAndPerformAction: #selector(createNewScene(inputProjectName:)),
                     target: self,
                     promptTitle: "\(kLocalizedNew) \(kLocalizedScene)",
                     promptMessage: "\(kLocalizedNew) \(kLocalizedScene):",
                     promptValue: nil,
                     promptPlaceholder: "New Scene",
                     minInputLength: UInt(kMinNumOfProjectNameCharacters),
                     maxInputLength: UInt(kMaxNumOfProjectNameCharacters),
                     invalidInputAlertMessage: kLocalizedObjectNameAlreadyExistsDescription,
                     existingNames: self.project.scenes.map({ ($0 as! Scene).name }))
    }

...
