...

/* No comment provided by engineer. */
"Background" = "Background";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Backgrounds" = "Backgrounds";

/* paint */
...

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* bluetooth */
...

/* No comment provided by engineer. */
"Continue" = "Continue";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Copy" = "Copy";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Copy Looks" = "Copy Looks";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete" = "Delete";

/* No comment provided by engineer. */
"Delete Backgrounds" = "Delete Backgrounds";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete Script" = "Delete Script";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete these Bricks?" = "Delete these bricks?";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete this background" = "Delete this background";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete this Script?" = "Delete this script?";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Edit" = "Edit";

/* Action sheet menu title */
...

/* No comment provided by engineer. */
"Explore" = "Explore";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Help" = "Help";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Hide Details" = "Hide Details";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Login" = "Login";

/* No comment provided by engineer. */
...

/* Name of the default catrobat project (used as filename!!) */
"My first project" = "My first program";

/* Default title of imported photo from camera (taken by camera) */
...

/* No comment provided by engineer. */
"New" = "New";

/* paint */
...

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Pocket Code" = "Pocket Code";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Scripts" = "Scripts";

/* bluetooth */
...

/* No comment provided by engineer. */
"Select All" = "Select All";

/* bluetooth */
...

/* No comment provided by engineer. */
"Show Details" = "Show Details";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Sounds" = "Sounds";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Upload" = "Upload";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Yes" = "Yes";

/* No comment provided by engineer. */
...
