/**
 *  Copyright (C) 2010-2023 The Catrobat Team
 *  (http://developer.catrobat.org/credits)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  An additional term exception under section 7 of the GNU Affero
 *  General Public License, version 3, is available at
 *  (http://developer.catrobat.org/license_additional_term)
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see http://www.gnu.org/licenses/.
 */

import XCTest

class SceneStartBrickTests: XCTestCase {

    var app: XCUIApplication!

    let loadingText = "\(kLocalizedLoading)..."

    override func setUp() {
        super.setUp()
        app = launchApp()
    }

    override func tearDown() {
        super.tearDown()
    }

    func testScenePresenterOrientation() {
        let projectName = "testProject"

        //Create new Project
        app.tables.staticTexts[kLocalizedNewProject].tap()
        let alertQuery = app.alerts[kLocalizedNewProject]
        alertQuery.textFields[kLocalizedEnterYourProjectNameHere].typeText(projectName)
        app.alerts[kLocalizedNewProject].buttons[kLocalizedOK].tap()
        XCTAssertNotNil(waitForElementToAppear(app.navigationBars[projectName]))
        app.toolbars.buttons[kLocalizedAdd].tap()

        app.alerts.textFields["New Scene"].typeText("Scene 2")
        app.alerts.buttons[kLocalizedOK].tap()

        XCTAssertTrue( waitForElementToAppear(app.tables.staticTexts["Scene 2"]).exists)

        app.tables.staticTexts["Scene 1"].tap()
        app.tables.staticTexts[kLocalizedBackground].tap()
        app.tables.staticTexts[kLocalizedScripts].tap()

        addBrick(label: "Scene start", section: kLocalizedCategoryControl, in: app)
        app.collectionViews.cells.otherElements.identifierTextBeginsWith("Scene start")
            .children(matching: .other)
            .element(boundBy: 1)
            .tap()
        app.pickerWheels.firstMatch.swipeUp()
        app.buttons[kLocalizedDone].tap()
        app.toolbars.buttons["Play"].tap()

    }

    func testScenePresenterLoadingViewShown() {
        let projectName = "testProject"
        let loadingText = "\(kLocalizedLoading)..."

        app.tables.staticTexts[kLocalizedNewProject].tap()
        let alertQuery = app.alerts[kLocalizedNewProject]
        alertQuery.textFields[kLocalizedEnterYourProjectNameHere].typeText(projectName)
        app.alerts[kLocalizedNewProject].buttons[kLocalizedOK].tap()
        XCTAssertNotNil(waitForElementToAppear(app.navigationBars[projectName]))

        app.toolbars.buttons["Play"].tap()
        XCTAssertFalse(waitForElementToDisappear(app.staticTexts[loadingText]).exists)
    }
}
